<resources>
    <string name="app_name">Mobility Profile</string>

    <!--Allow access-->
    <string name="allow_access">Allow Mobility Profile access to:</string>
    <string name="checkbox_GPS">GPS</string>
    <string name="checkbox_calendar">Read calendar events</string>
    <!--Tracking-->
    <string name="tracking_title">Location tracking</string>
    <string name="tracking_start">Start</string>
    <string name="tracking_stop">Stop</string>
    <string name="tracking_on_hint">continuous location tracking is on</string>

    <!--Info page-->
    <string name="info">is an application which offers your next probable destination to your favourite journey planner without you needing to type anything.</string>
    <string name="permissions_info">
        To do this Mobility Profile needs permissions to read your calendar and access your location. You can always switch them off.\n\n
        If you have calendar events, Mobility profile will suggest them.\n\n
        And with your location data Mobility Profile will learn step by step to predict your next destination.
    </string>

    <!--Last searches page-->
    <string name="last_searches">Your last searches</string>
    <string name="profile_item_delete_title">Delete this route search?</string>

    <!--Favourite GPSPoints page-->
    <string name="favourites_title">Your places</string>
    <string name="favourites_title_info">You can add your favorite places, and they will show up in your destination suggestions.
        In addition, Mobility Profile will suggest new places based on tracking.
    </string>
    <string name="favourites_edit_title">Edit this favourite place</string>
    <string name="favourites_delete_title">Delete this favourite place?</string>
    <string name="favourites_unfavourite_title">Unfavourite this favourite place?</string>
    <string name="favourites_verify_title">Verify this suggested place</string>
    <string name="favourites_back_button">Back to Your places</string>
    <string name="favourites_auto_generated_delete_title">Forget this place for good or unfavourite? </string>
    <string name="favourites_name_hint">Name</string>
    <string name="favourites_address_hint">Address</string>
    <string name="favourites_suggestion_address_hint">You can fix the address here</string>
    <string name="favourites_see_suggestions">See new favourite place suggestions</string>
    <string name="favourite_auto_generated_hint">This is auto generated suggestion of a favourite place</string>

    <string name="favourite_auto_generated_title">Auto generated suggestion</string>
    <string name="favourite_auto_generated_text">This is a suggestion of a new favourite place based on your location data. You can verify this as a new favourite, only edit the address or discard it for good.</string>
    <string name="favourite_set_favourite_title">Save this suggestion as a favourite?</string>

    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="ok">OK</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="forget">Forget</string>
    <string name="unfavourite">Unfavourite</string>
    <string name="set_favourite">Set Favourite</string>

    <string name="reset_searches_button_text">Delete all last searches</string>
    <string name="reset_searches_title">Delete all searches?</string>
    <string name="reset_searches_message">Deletes all route searches you\&apos;ve made.</string>


    <string name="reset_all_button_text">Reset app and delete all data</string>
    <string name="reset_title">Delete all collected data?</string>
    <string name="reset_message">Deletes all collected data, including location history, searched routes and favourite places.</string>


    <string name="custom_permission_info">Allows the software to use information provided by Mobility Profile. Exact data collected by Mobility Profile won\'t be shared, only suggestions Mobility Profile is giving based on that data.</string>
    <string name="conflict_header">The following applications have defined conflicting permissions with Mobility Profile:\n</string>
    <string name="conflict_info">If two or more applications define the same permission, the application that is installed first is the one whose definition is used. Applications listed above were installed before Mobility Profile and have defined the same permission as Mobility Profile. To solve the problem, uninstall those applications, then run Mobility Profile and make sure this message is no longer shown. After that you can reinstall those applications.
        \n\nMore information about the problem can be found at https://datatheorem.github.io/2014/04/16/custom-permissions/</string>


    <!--Settings-->
    <string name="settings">Settings</string>
    <string name="settings_title">Settings</string>
    <string name="transport_modes_title">Transport mode preferences</string>
    <string name="walking">Walking</string>
    <string name="bike">Bike</string>
    <string name="car">Car</string>
    <string name="bus">Bus</string>
    <string name="metro">Metro</string>
    <string name="tram">Tram</string>
    <string name="train">Train</string>
    <string name="boat">Boat</string>
    <string name="plane">Plane</string>
    <string name="settings_reset_title">Your data</string>

    <!--Back Up-->
    <string name="backup">Backup your data</string>
    <string name="backup_title">Back Up</string>
    <string name="backup_text">Back up your data. The database file,
        called mobilityprofile.db, will be saved to your main folder of internal storage. </string>
    <string name="location_tracking_title">Gathering data</string>
    <string name="location_tracking_description">Mobility Profile is tracking your location</string>
    <string name="stop_location_tracking">Stop tracking</string>
    <string name="licenses">Licenses</string>

    <string name="other_info">Other info</string>


    <string name="software_licenses" translatable="false">
        THE FOLLOWING SETS FORTH ATTRIBUTION NOTICES FOR THIRD PARTY SOFTWARE THAT MAY BE INCLUDED
        IN PORTIONS OF MOBILITY PROFILE.

        \n\n----------

        \n\nThe following software may be included in this product: CWAC Security. The software is
        subject to the following license and notice:

        \n\nLicensed under the Apache License, Version 2.0 (the "License"); you may not use this
        file except in compliance with the License. You may obtain a copy of the License at

        \n\nhttp://www.apache.org/licenses/LICENSE-2.0

        \n\nUnless required by applicable law or agreed to in writing, software distributed under
        the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
        KIND, either express or implied. See the License for the specific language governing
        permissions and limitations under the License.

        \n\n----------

        \n\nThe following software may be included in this product: EasyPermissions. The software is
        subject to the following license and notice:

        \n\nLicensed under the Apache License, Version 2.0 (the "License"); you may not use this
        file except in compliance with the License. You may obtain a copy of the License at

        \n\nhttp://www.apache.org/licenses/LICENSE-2.0

        \n\nUnless required by applicable law or agreed to in writing, software distributed under
        the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
        KIND, either express or implied. See the License for the specific language governing
        permissions and limitations under the License.

        \n\n----------

        \n\nThe following software may be included in this product: Sugar ORM. The software is
        subject to the following license and notice:

        \n\nCopyright © 2012 by Satya Narayan

        \n\nPermission is hereby granted, free of charge, to any person obtaining a copy of this
        software and associated documentation files (the "Software"), to deal in the Software
        without restriction, including without limitation the rights to use, copy, modify, merge,
        publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons
        to whom the Software is furnished to do so, subject to the following conditions:

        \n\nThe above copyright notice and this permission notice shall be included in all copies or
        substantial portions of the Software.

        \n\nTHE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED,
        INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR
        PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE
        FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR
        OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER
        DEALINGS IN THE SOFTWARE.

        \n\n----------

        \n\nThe following software may be included in this product: Android GeoJSON. The software is
        subject to the following license and notice:

        \n\nThe MIT License (MIT)

        \n\nCopyright © 2014 Jonathan Baker

        \n\nPermission is hereby granted, free of charge, to any person obtaining a copy of this
        software and associated documentation files (the "Software"), to deal in the Software
        without restriction, including without limitation the rights to use, copy, modify, merge,
        publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons
        to whom the Software is furnished to do so, subject to the following conditions:

        \n\nThe above copyright notice and this permission notice shall be included in all copies or
        substantial portions of the Software.

        \n\nTHE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED,
        INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR
        PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE
        FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR
        OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER
        DEALINGS IN THE SOFTWARE.
    </string>
</resources>
