<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/favourites_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

    <GridLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <EditText
            android:id="@+id/add_favourite_name"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/favourites_name_hint"
            android:padding="10dp"/>

        <EditText
            android:id="@+id/add_favourite_address"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/favourites_address_hint"
            android:padding="10dp"/>

        <Button
            android:id="@+id/add_favourite_button"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/favourites_button" />

    </GridLayout>

    <ListView
        android:id="@+id/favourites_listView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" />

</LinearLayout>