<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/favourite"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/favourite_item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/favourite_item_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"/>

    <WebView
        android:id="@+id/webview"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_gravity="center_horizontal"/>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:rowCount="1"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp">

        <Button
            android:id="@+id/favourite_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:layout_gravity="center_horizontal"
            android:layout_margin="15dp"
            android:background="@color/color_sand"
            android:layout_marginTop="20dp"/>

        <Button
            android:id="@+id/favourite_set_favourite"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/set_favourite"
            android:layout_gravity="center_horizontal"
            android:layout_margin="15dp"
            android:background="@color/color_sand"
            android:layout_marginTop="20dp"/>

        <Button
            android:id="@+id/favourite_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:layout_gravity="center_horizontal"
            android:layout_margin="15dp"
            android:background="@color/color_sand"
            android:layout_marginTop="20dp"/>

    </GridLayout>

</LinearLayout>